# Socket

./: readme  задание.docx
prog1/: CMakeLists.txt  main.cpp
prog1/FirstProgramme/: Connector.h  FirstProgramme.cpp  FirstProgramme.h
prog1/FirstProgramme/Socket/: Socket.cpp  Socket.h
prog1/FirstProgramme/Streams/: AcceptedStream.cpp  AcceptedStream.h  ProcessStream.cpp  ProcessStream.h  Stream.h
prog2/: CMakeLists.txt  main.cpp
prog2/SecondProgramme/: Connector.h  SecondProgramme.cpp  SecondProgramme.h
prog2/SecondProgramme/Analyzer/: Analyzer.h  DefaultAnalizer.cpp  DefaultAnalizer.h
prog2/SecondProgramme/Socket/: Socket.cpp  Socket.h
